--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/wdio"
+    "test": "./node_modules/.bin/wdio",
+    "test.mocha": "mocha --no-timeouts \"test/test-mocha.js\""
   },
   "author": "Yurii Besedin <uabeseda@gmail.com>",
   "license": "ISC",
   "devDependencies": {
-    "@wdio/cli": "^5.12.1",
-    "@wdio/local-runner": "^5.12.1",
-    "@wdio/mocha-framework": "^5.12.1",
-    "@wdio/selenium-standalone-service": "^5.12.1",
-    "@wdio/spec-reporter": "^5.12.1",
-    "@wdio/sync": "^5.12.3"
+    "@wdio/cli": "^5.15.6",
+    "@wdio/local-runner": "^5.15.6",
+    "@wdio/mocha-framework": "^5.15.1",
+    "@wdio/selenium-standalone-service": "^5.15.0",
+    "@wdio/spec-reporter": "^5.15.2",
+    "@wdio/sync": "^5.15.7"
   },
-  "repository": "https://github.com/yuriieasternpeak/wdio-edge-switchtoframe.git"
+  "repository": "https://github.com/yuriieasternpeak/wdio-edge-switchtoframe.git",
+  "dependencies": {
+    "mocha": "^6.2.2"
+  }
 }
